# PhysicsEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
common/include/: Allocator.h  Body.h  SharedPtr.h  Timer.h  UniquePtr.h  World.h
common/src/: Allocator.cpp  Timer.cpp  World.cpp
common/tests/: TestAllocator.cpp  TestSharedPtr.cpp  TestTimer.cpp  TestUniquePtr.cpp
documentation/: blogpost.md  blogpost.md.html
graphics/include/: Color.h  Display.h  Exception.h  Input.h
graphics/src/: Display.cpp  Input.cpp
include/: Body.h
libs/Math/: Angle.h  CMakeLists.txt  Definition.h  Random.h  Shape.h  Utility.h  vcpkg.json
libs/Math/include/: Angle.h  Definition.h  Exception.h  Intrinsics.h  Mat2x2.h  Mat3x3.h  Mat4x4.h  MathUtility.h  NScalar.h  NVec2.h  NVec3.h  NVec4.h  Quaternion.h  Random.h  Utility.h  Vec2.h  Vec3.h  Vec4.h
libs/Math/include/lookupTables/: LookUpTableCos.h  LookUpTableCot.h  LookUpTableSin.h  LookUpTableTan.h
libs/Math/tests/: TestAngle.cpp  TestCot.cpp  TestMat2x2.cpp  TestMat3x3.cpp  TestMat4x4.cpp  TestMathUtility.cpp  TestNScalar.cpp  TestNVec2.cpp  TestNVec3.cpp  TestNVec4.cpp  TestQuaternion.cpp  TestRandom.cpp  TestUtility.cpp  TestVec2.cpp  TestVec3.cpp  TestVec4.cpp
physics/include/: Allocator.h  Body.h  Collider.h  ColliderCollisionType.h  ColliderPair.h  ContactListener.h  ContactResolver.h  Exception.h  QuadTree.h  Ref.h  UniquePtr.h  World.h
physics/src/: Allocator.cpp  Body.cpp  Collider.cpp  QuadTree.cpp  World.cpp
physics/tests/: TestAllocator.cpp  TestBody.cpp  TestCollider.cpp  TestQuadTree.cpp  TestWorld.cpp
physics_tests/: TestBody.cpp  TestSharedPtr.cpp  TestTimer.cpp  TestUniquePtr.cpp  TestWorld.cpp
samples/: main.cpp
samples/include/: CollisionSample.h  FreeTriggerSample.h  GravitySample.h  PlanetSystemSample.h  Sample.h  SampleManager.h  TriggerSample.h
samples/planets/: main.cpp
samples/planets/include/: Display.h  PlanetSystem.h
samples/planets/src/: Display.cpp  PlanetSystem.cpp
samples/src/: CollisionSample.cpp  FreeTriggerSample.cpp  GravitySample.cpp  PlanetSystem.cpp  PlanetSystemSample.cpp  Sample.cpp  SampleManager.cpp  TriggerSample.cpp
samples/triggers/: main.cpp
samples/triggers/include/: Ball.h  BallListener.h  Trigger.h  TriggerListener.h  TriggerSample.h  Triggers.h
samples/triggers/src/: BallListener.cpp  TriggerListener.cpp  TriggerSample.cpp  Triggers.cpp
